src/objects/CloneSettings__mdt.object
<CustomObject>
    <description>Cloning Settings for the batch job</description>
    <fields>
        <fullName>Condition_Field__c</fullName>
        <label>Condition Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity Level</fullName>
                    <default>true</default>
                    <label>Opportunity Level</label>
                </value>
                <value>
                    <fullName>Quote Level</fullName>
                </value>
                <value>
                    <fullName>SBQQ__Quote__c</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object2__c</fullName>
        <label>Object2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>main object to query</description>
        <inlineHelpText>main object to query</inlineHelpText>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Item__c</fullName>
        <description>item in the sequence of cloning which contains parents&apos; ids</description>
        <inlineHelpText>item in the sequence of cloning which contains parents&apos; ids</inlineHelpText>
        <label>Target Item</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mapDSI__c</fullName>
        <label>mapDSI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CloneSettings</label>
    <pluralLabel>CloneSettings</pluralLabel>
</CustomObject>